fix: /docs endpoint
